--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     min-height: 100vh;
     display: grid;
     place-items: center;
-    background-image: url(/src/br1.png);
+    background-color: rgb(5, 49, 5);
     background-size: cover;
 }
 
